iss#147 Add monotonically increasing track numbers validation to Classics validation